[package]
name = "envy-rs"
description = "Generate obfuscated Windows PowerShell payloads that resolve to paths by globbing environment variables."
version = "1.4.2"
readme = "README.md"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["pentest", "powershell", "glob", "obfuscation"]
exclude = ["/assets"]

[dependencies]
serde_yaml = "0.9.34"
crossbeam = "0.8.4"
color-eyre = "0.6.3"
syntect = "5.2.0"

[dependencies.clap]
version = "4.5.7"
features = ["derive"]
