[package]
name = "envy-rs"
description = "Generate obfuscated Windows PowerShell payloads that resolve to paths by globbing environment variables."
version = "2.0.0"
readme = "README.md"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["pentest", "powershell", "glob", "obfuscation"]
exclude = ["/assets"]

[dependencies]
serde_yaml = "0.9.34"
syntect = "5.2.0"
async-channel = "2.3.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
color-eyre = "0.6.3"

[dependencies.clap]
version = "4.5.36"
features = ["derive"]
