[package]
name = "envy-rs"
description = "Generate obfuscated Windows PowerShell payloads that resolve to paths by globbing environment variables."
version = "2.0.0"
readme = "README.md"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["pentest", "powershell", "glob", "obfuscation"]
exclude = ["/assets"]

[dependencies]
serde_yaml = "0.9.34"
syntect = "5.3.0"
async-channel = "2.5.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
eyre = "0.6.12"
color-eyre = "0.6.4"

[dependencies.clap]
version = "4.5.49"
features = ["derive"]
